<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    商品リスト(データがあるときに表示)-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

<!--    空状態の表示(商品がないときに表示)-->

    <!--    右下の+ ボタン-->

    <LinearLayout
        android:id="@+id/layoutEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_anchor="@+id/layoutEmpty"
        app:layout_anchorGravity="center">

        <!--    箱のアイコン(画像に合わせて)-->
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/box"
            android:contentDescription="@string/labelNoProduct"/>

        <!--    「商品がまだありません」-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelNoProduct"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <!--    先売りする商品を登録してください-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelNoProductSub"
            android:textSize="12sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fadAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/btnAddProduct"
        app:layout_anchor="@+id/layoutEmpty"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@android:drawable/ic_input_add" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>